@@ -1,3 +1,13 @@
+2008-10-10  Chris Marrin  <cmarrin@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        Testcase for https://bugs.webkit.org/show_bug.cgi?id=21025
+        CSS transition with duration=0 and delay=0 doesn't override ongoing transition
+
+        * transitions/interrupt-zero-duration-expected.txt: Added.
+        * transitions/interrupt-zero-duration.html: Added.
+
 2008-10-10  David Hyatt  <hyatt@apple.com>
 
         Add test for scrollbar buttons and track supporting increment/decrement/start/end.
